# ChangeLog for dev-python/pycairo
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pycairo/ChangeLog,v 1.100 2011/05/08 21:28:41 arfrever Exp $

  14 May 2011; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
  pycairo-1.10.0-r1.ebuild:
  Simplify the waflib patching hack slightly.

  14 May 2011; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
  pycairo-1.10.0-r1.ebuild, +files/pycairo-1.10.0-waf-multilib.patch:
  Fix build issue on portage-multilib caused by /usr/bin/python-config being
  wrapped by abi-wrapper. waf expected python-config to be a python script,
  but it's really just a shebanged bash script in this case -- so waflib is
  patched to let the OS decide on the intepreter to use for python-config.

*pycairo-1.10.0-r1 (08 May 2011)

  08 May 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +pycairo-1.10.0-r1.ebuild, +files/py2cairo-1.10.0-svg_check.patch:
  1.10.0 version bump for Python 2.

*pycairo-1.10.0 (24 Apr 2011)

  24 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +files/pycairo-1.8.10-cairo.version_info.patch, +pycairo-1.10.0.ebuild,
  +files/pycairo-1.10.0-svg_check.patch:
  Version bump. This ebuild provides pycairo 1.10.0 for Python 3 and pycairo
  1.8.10 for Python 2. Fix cairo.version_info in pycairo 1.8.10 for Python 2
  (bug #361781).

  23 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -pycairo-1.8.8.ebuild, -files/pycairo-1.8.8-pkgconfig_dir.patch:
  Delete.

  18 Oct 2010; Jeroen Roovers <jer@gentoo.org> pycairo-1.8.10.ebuild:
  Stable for PPC (bug #337146).

  18 Oct 2010; Jeroen Roovers <jer@gentoo.org> pycairo-1.8.10.ebuild:
  Stable for HPPA (bug #337146).

  03 Oct 2010; Raúl Porcel <armin76@gentoo.org> pycairo-1.8.10.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #337146

  02 Oct 2010; Fabian Groffen <grobian@gentoo.org> pycairo-1.8.10.ebuild:
  Marked ~x64-macos, bug #333981
