@@ -8,27 +8,24 @@ AUX pycairo-1.8.10-cairo.version_info.patch 337 RMD160 4b53e98616327cdd444e3a09a
 AUX pycairo-1.8.10-pkgconfig_dir.patch 339 RMD160 ebb914c2540dde93e99946ca7292ee9b23997444 SHA1 267f98a1203482e3bee742aceb2fb73b931c02d1 SHA256 9c3d630afa545825448a34b4bf0782c5bde94058fa2263f65054c525b8d585ed
 AUX pycairo-1.8.8-svg_check.patch 3009 RMD160 5335b1dd097022bae1fcb1eb1c3bc3e0706a3186 SHA1 a40017c41e7a984ccf0dc308076ff1827a7e0587 SHA256 eff2f24f5bf93ca45b18d57287ced0a1241391ece20dd57d21842f2ca820fd72
 DIST py2cairo-1.10.0.tar.bz2 402070 RMD160 ce75db9af32ef1a3e90f6aaa649cbb2493a941a4 SHA1 2efa8dfafbd6b8e492adaab07231556fec52d6eb SHA256 d30439f06c2ec1a39e27464c6c828b6eface3b22ee17b2de05dc409e429a7431
-DIST py2cairo-1.8.10.tar.gz 588459 RMD160 932e19f2f582bdf5735bdc92720b76edfb0a0c8e SHA1 6bb0b3e0249bce9fc0480aadad0c602d32f26ec1 SHA256 b15f71019e42e06d86f7e8fe5587f07c3de5a59a6c3a071b25fe100796dbcd56
 DIST pycairo-1.10.0.tar.bz2 246556 RMD160 7d1c1c05113e5bbad32dbe96c65c918b170cac33 SHA1 b4283aa1cc9aafd12fd72ad371303a486da1d014 SHA256 9aa4078e7eb5be583aeabbe8d87172797717f95e8c4338f0d4a17b683a7253be
 EBUILD pycairo-1.10.0-r1.ebuild 4829 RMD160 606bc6ab8a562aaf47ef0b6c096e49baf1debbcb SHA1 cd5bfc4b73e3022cf0888002282f83088f05bfb7 SHA256 92200fd1d826f6e55c4e38ad0dbeeb6db1bc665ab8098bed14c6c27c1a9be999
-EBUILD pycairo-1.10.0.ebuild 3581 RMD160 4d91f83b9809ecfd64400889253cd1dd701a32b0 SHA1 f128a9bc4e4a24a367062b55eb52da78574e27c0 SHA256 388b1dc3dee5d629ef256c0f34f04a7557655623c5d6aa1a64dc59948f36344e
-EBUILD pycairo-1.8.10.ebuild 2233 RMD160 09c531269db883119a673511d38785a8ca670052 SHA1 75ff22f936d75943e89a8c96a716cf90d3fa6da2 SHA256 f1c94a660f20f6b25c6c85a5db7b45d945051fb423d124b25706fc63fb1a7d65
-MISC ChangeLog 13784 RMD160 a5d09e7fc5259cc58c45ab375b57f3843ccae456 SHA1 8c803aa0d4c5cd30448e216583ae919bed2d3a57 SHA256 b4de44a873c17c1ad6e50ba3af666065d23fe24492d1d54bce62bb73fb0974f4
+MISC ChangeLog 13926 RMD160 5097e6313833237bef43380c7a6340a6f32217a6 SHA1 72c9a7be55f8543d1db399c6e51e112f09fb769e SHA256 7dd8b29546a228c0c17f113ceeede3e341ddd4518295196a48ea842d6b56d918
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iQIcBAEBCAAGBQJNztL5AAoJEHQ6UuhrqBBQ57MP/jbcqGeMfNU/Hz8Ac0o3lGUL
-HfKrUnZORD7iIfLY0LL+4o2dfCvycjZKV7xiEuyFBM19qyXTbDe5qUYtwGd/VP9G
-AWrdPqm7DPJ/AfMHcJrOvw0LGZTR7BD6VR6lUZ3j/FzjpmP92YsSV1kt1uBdI/Ow
-6eQXhjDAXC7c20cjQ0O+ojhs/Q08ZUIAw2Z7sK7Ov/hFBPixYLMAOC3pI0iW2VLT
-ywlXIru/UbPCd+/P2wbGvoOl6DrvKvZdQt9qjJ0zDRS1CL4uW+KjnwqMT09yLP8M
-P9Zdtujo8idCPAJk07I0wSQJTLJhx5Mpou9M7lMjsjGOoN4sQbq3qU0OCynb3qzU
-SxoyRy2FWpokd9Ix6vtLTp9h5sA94ZQmC/mXn1IRGmbAAI52vyNchbBYzilxn8W8
-JoJINp4+Kq1dtjspucOnj5+IWxVJHDW0BbGm0wzS+LPwBMYsC8A2OXGVvX2RLg2A
-P/meKQeHUPqxOkZUFh8ZIl9ivIuHU3o/L9D6ue499f9qC9P/cMcC1krZIpuLut/B
-5q64U67PWk5lubh95TTch5pWc6ANx/X6E/ONMcghSInsq+cVirOjMwcmnYbcAwzv
-pZFA0O4cbRzuQklQnLyb+lwRaGnQsv4ciuq38IuEaX6OxhMvMYX2LAyGdbTWhy0F
-6mEfyve1otYUrR6jR7DP
-=ICTr
+iQIcBAEBCAAGBQJN73KZAAoJEHQ6UuhrqBBQ88kQAKrVzdHn3jmVpLZycpc7EyZc
+YYdXhfUM/yN7pPXmSCMrg8K0KxO17hcN3HJiPmVPmDFZt1WBOMD9zqdwKGbtpnSQ
+Yuqv4uCaO76N3jbXz58jbP4OeROVNZuUr2QiIqS2vUKP2wk7ZbtcJx9DtfxWM4Xb
+Tj/Ho27jsTixDBC48ELErwN8JjMbn+srL1YOcv0Ed1dG8DKvIl0UTDlV6OjmA1GH
+akSV2w7pUOYRfZnqsYYEVHpuc0y3hU1w8SWT7q59qcFepkWeCQjYVmMfsDOzs8J7
+qqdj0kYDcihkziTWkC5+cQR+MAF5+0W5/ULbORi+iPTUGmCksNoij3laCgog73at
+9X0g6OusSyWsg51RpswuJG7ZKa9mijeFx5FyxAQUZtsnSZuDsqk8qd/7R6baW+gm
+xb7xfJS9m0aDLJG9AxOi0S26H86GrCckpAU9Z9iX7linnEYV6imIxFgUld9ZaOEe
+0uVxLgRZ98t73M3eySacFwj0v1k1xiB+3SzHs8YoMFYkVLxM8ZxH6kPMx3/miRaO
+cVZB06wxo44nUqQc/iQ2ywzjGAmPB54i/587auzSd5QFTMVFqoW8k4BcKXqxuodo
+yN9T5eeXN4Y3WtfLqoFpzk+N4m1ZZcCKCeX1UAT6b6pjatLksVQttdVZp+Q4q+YI
+5s/d/03P2+NSdHqJlnN3
+=LX1e
 -----END PGP SIGNATURE-----
